[package]
name = "tour-of-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sort"
path = "src/sort.rs"

[[bin]]
name = "guessing_game"
path = "src/guessing_game.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
